Fix layout shifting

--- a/scss/mixins/index.scss
+++ b/scss/mixins/index.scss
@@ -3,16 +3,16 @@
 
 
 @mixin cosmic-border() {
-  border: 0;
+  border: 1px solid transparent;
 
   &:before {
     content: '';
     z-index: -1;
     position: absolute;
-    top: -1px;
-    left: -1px;
-    height: calc(100% + 2px);
-    width: calc(100% + 2px);
+    top: -2px;
+    left: -2px;
+    height: calc(100% + 4px);
+    width: calc(100% + 4px);
     filter: blur(1px);
     opacity: 0.7;
     border-radius: var(--zn-border-radius-large);
