--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -22,7 +22,7 @@
 .dialog {
   flex-direction: column;
   z-index: 2;
-  width: calc(var(--width) + 2px);
+  width: calc(var(--width) + 1px);
   overflow: hidden;
   max-width: calc(100% - var(--zn-spacing-2x-large));
   max-height: calc(100% - var(--zn-spacing-2x-large));
